pkg/api/testdata/new-portal/want.edge-ingresses.yaml
apiVersion: hub.traefik.io/v1alpha1
kind: EdgeIngress
metadata:
  name: new-portal-3684986092-portal
  namespace: agent-ns
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIPortal
      name: new-portal
  labels:
    app.kubernetes.io/managed-by: traefik-hub
spec:
  service:
    name: dev-portal-service-name
    port: 8080
