pkg/api/testdata/new-portal/want.ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-portal-3684986092-portal-ing
  namespace: agent-ns
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: APIPortal
      name: new-portal
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: api-entrypoint
spec:
  ingressClassName: ingress-class
  rules:
    - host: hello.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dev-portal-service-name
                port:
                  number: 8080
    - host: welcome.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: dev-portal-service-name
                port:
                  number: 8080

  tls:
    - secretName: hub-certificate-portal-custom-domains-3684986092
      hosts:
        - hello.example.com
        - welcome.example.com
